@@ -48,7 +48,7 @@
     <dependency org="log4j" name="log4j" rev="1.2.16" transitive="false" conf="default"/>
     <dependency org="jline" name="jline" rev="2.11" transitive="false" conf="optional->default"/>
 
-    <dependency org="org.jboss.netty" name="netty" conf="default" rev="3.2.5.Final">
+    <dependency org="io.netty" name="netty" conf="default" rev="3.7.0.Final">
       <artifact name="netty" type="jar" conf="default"/>
     </dependency>
 
