@@ -647,6 +647,8 @@ IMPROVEMENTS:
   ZOOKEEPER-1627. Add org.apache.zookeeper.common to exported packages
   in OSGi MANIFEST (Arnoud Glimmerveen via phunt)
 
+  ZOOKEEPER-1715. Upgrade netty version (Sean Bridges via phunt)
+
 headers
 
 Release 3.4.0 - 
